added php-cs-fixer to test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,8 @@ jobs:
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
 
+    - name: Run php-cs-fixer
+      run: composer run-script lint
+
     - name: Run test suite
       run: composer run-script test
