--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,8 @@ jobs:
       run: composer run-script lint
 
     - name: Run test suite
-      run: composer run-script test
+      run: |
+        composer run-script test
+        bash <(curl -s https://codecov.io/bash)
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
