--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
-    "lint": "vendor/bin/php-cs-fixer fix . --config=.php_cs -v --dry-run --stop-on-violation --using-cache=no"
+    "lint": "vendor/bin/php-cs-fixer fix . -v --dry-run --stop-on-violation --using-cache=no"
   }
 }
