--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "php": "^7.4"
+    "php": "^7.4||^8"
   },
   "autoload": {
     "psr-4": {
@@ -27,7 +27,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
+    "phpunit/phpunit": "^9.5.0",
     "friendsofphp/php-cs-fixer": "^3.0"
   },
   "scripts": {
